deps: update fmt to v0.16.2

--- a/example/.env
+++ b/example/.env
@@ -1,4 +1,5 @@
 server_external_mode=true
-browser_position=2053,32
-browser_width=1042
+browser_position=2048,32
+browser_width=1047
 browser_height=780
+wasmsize_mode=S
