--- a/example/.env
+++ b/example/.env
@@ -1,5 +1,5 @@
 server_external_mode=true
-browser_position=2048,32
-browser_width=1047
+browser_position=2044,32
+browser_width=1051
 browser_height=780
-wasmsize_mode=S
+wasmsize_mode=L
